@@ -1,6 +1,7 @@
 package org.opentripplanner.routing.linking;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -12,7 +13,6 @@ import org.locationtech.jts.geom.Envelope;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LineString;
-import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.linearref.LinearLocation;
 import org.locationtech.jts.linearref.LocationIndexedLine;
 import org.locationtech.jts.operation.distance.DistanceOp;
@@ -55,7 +55,6 @@ import org.slf4j.LoggerFactory;
  */
 public class VertexLinker {
 
-  private static final Logger LOG = LoggerFactory.getLogger(VertexLinker.class);
   /**
    * if there are two ways and the distances to them differ by less than this value, we link to both
    * of them
@@ -63,6 +62,8 @@ public class VertexLinker {
   private static final double DUPLICATE_WAY_EPSILON_METERS = 0.001;
   private static final int INITIAL_SEARCH_RADIUS_METERS = 100;
   private static final int MAX_SEARCH_RADIUS_METERS = 1000;
+  // exit a complex area maximally via this many exit points
+  private static final int MAX_AREA_LINKS = 300;
   private static final GeometryFactory GEOMETRY_FACTORY = GeometryUtils.getGeometryFactory();
   /**
    * Spatial index of StreetEdges in the graph.
@@ -127,30 +128,6 @@ public class VertexLinker {
   // TODO Temporary code until we refactor WalkableAreaBuilder (#3152)
   public void setAddExtraEdgesToAreas(Boolean addExtraEdgesToAreas) {
     this.addExtraEdgesToAreas = addExtraEdgesToAreas;
-  }
-
-  /**
-   * While in destructive splitting mode (during graph construction rather than handling routing
-   * requests), we remove edges that have been split and may then re-split the resulting segments
-   * recursively, so parts of them are also removed. Newly created edge fragments are added to the
-   * spatial index; the edges that were split are removed (disconnected) from the graph but were
-   * previously not removed from the spatial index, so for all subsequent splitting operations we
-   * had to check whether any edge coming out of the spatial index had been "soft deleted".
-   * <p>
-   * I believe this was compensating for the fact that STRTrees are optimized at construction and
-   * read-only. That restriction no longer applies since we've been using our own hash grid spatial
-   * index instead of the STRTree. So rather than filtering out soft deleted edges, this is now an
-   * assertion that the system behaves as intended, and will log an error if the spatial index is
-   * returning edges that have been disconnected from the graph.
-   */
-  private static boolean edgeReachableFromGraph(Edge edge) {
-    boolean edgeReachableFromGraph = edge.getToVertex().getIncoming().contains(edge);
-    if (!edgeReachableFromGraph) {
-      LOG.error(
-        "Edge returned from spatial index is no longer reachable from graph. That is not expected."
-      );
-    }
-    return edgeReachableFromGraph;
   }
 
   /** projected distance from stop to edge, in latitude degrees */
@@ -270,10 +247,10 @@ public class VertexLinker {
       .query(env, scope)
       .filter(StreetEdge.class::isInstance)
       .map(StreetEdge.class::cast)
-      .filter(e -> e.canTraverse(traverseModes) && edgeReachableFromGraph(e))
+      .filter(e -> e.canTraverse(traverseModes) && e.isReachableFromGraph())
       .map(e -> new DistanceTo<>(e, distance(vertex, e, xscale)))
       .filter(ead -> ead.distanceDegreesLat < radiusDeg)
-      .collect(Collectors.toList());
+      .toList();
 
     if (candidateEdges.isEmpty()) {
       return Set.of();
@@ -364,6 +341,7 @@ public class VertexLinker {
     double length = SphericalDistanceLibrary.length(orig);
 
     IntersectionVertex start = null;
+    boolean snapped = true;
 
     // if we're very close to one end of the line or the other, or endwise, don't bother to split,
     // cut to the chase and link directly
@@ -387,6 +365,7 @@ public class VertexLinker {
     ) {
       start = (IntersectionVertex) edge.getToVertex();
     } else {
+      snapped = false;
       boolean split = true;
       // if vertex is inside an area, no need to snap to nearest edge and split it
       if (this.addExtraEdgesToAreas && edge instanceof AreaEdge aEdge) {
@@ -411,7 +390,9 @@ public class VertexLinker {
     }
 
     if (this.addExtraEdgesToAreas && edge instanceof AreaEdge aEdge) {
-      addAreaVertex(start, aEdge.getArea(), scope, tempEdges);
+      if (!snapped || !aEdge.getArea().visibilityVertices.contains(start)) {
+        addAreaVertex(start, aEdge.getArea(), scope, tempEdges);
+      }
     }
     // TODO Consider moving this code
     if (OTPFeature.FlexRouting.isOn()) {
@@ -533,8 +514,6 @@ public class VertexLinker {
     }
   }
 
-  private record StreetEdgePair(StreetEdge e0, StreetEdge e1) {}
-
   /**
    * Link a new vertex permanently with area geometry
    */
@@ -568,7 +547,18 @@ public class VertexLinker {
 
     int added = 0;
 
+    // if area is too complex, consider only part of visibility nodes
+    float skip_ratio = (float) MAX_AREA_LINKS / (float) visibilityVertices.size();
+    int i = 0;
+    float sum_i = 0;
+
     for (IntersectionVertex v : visibilityVertices) {
+      sum_i += skip_ratio;
+      if (Math.floor(sum_i) < i + 1) {
+        continue;
+      }
+      i = (int) Math.floor(sum_i);
+
       LineString newGeometry = GEOMETRY_FACTORY.createLineString(
         new Coordinate[] { nearestPoints[0], v.getCoordinate() }
       );
@@ -596,6 +586,26 @@ public class VertexLinker {
     }
   }
 
+  static final Set<TraverseMode> noThruModes = Set.of(
+    TraverseMode.WALK,
+    TraverseMode.BICYCLE,
+    TraverseMode.CAR
+  );
+
+  private Set<TraverseMode> getNoThruModes(Collection<Edge> edges) {
+    var modes = new HashSet<>(noThruModes);
+    for (Edge e : edges) {
+      if (e instanceof StreetEdge se) {
+        for (TraverseMode tm : noThruModes) {
+          if (!se.isNoThruTraffic(tm)) {
+            modes.remove(tm);
+          }
+        }
+      }
+    }
+    return modes;
+  }
+
   private void createSegments(
     IntersectionVertex from,
     IntersectionVertex to,
@@ -612,7 +622,6 @@ public class VertexLinker {
       new Coordinate[] { from.getCoordinate(), to.getCoordinate() }
     );
 
-    List<NamedArea> intersects = new ArrayList<>();
     NamedArea hit = null;
     for (NamedArea area : areas) {
       Geometry polygon = area.getPolygon();
@@ -626,6 +635,11 @@ public class VertexLinker {
       // If more than one area intersects, we pick one by random for the name & properties
       double length = SphericalDistanceLibrary.distance(to.getCoordinate(), from.getCoordinate());
 
+      // apply consistent NoThru restrictions
+      // if all joining edges are nothru, then the new edge should be as well
+      var incomingNoThruModes = getNoThruModes(to.getIncoming());
+      var outgoingNoThruModes = getNoThruModes(to.getIncoming());
+
       AreaEdge ae = new AreaEdge(
         from,
         to,
@@ -636,6 +650,10 @@ public class VertexLinker {
         false,
         ael
       );
+      for (TraverseMode tm : outgoingNoThruModes) {
+        ae.setNoThruTraffic(tm);
+      }
+
       if (scope != Scope.PERMANENT) {
         tempEdges.addEdge(ae);
       }
@@ -651,6 +669,10 @@ public class VertexLinker {
           true,
           ael
         );
+      for (TraverseMode tm : incomingNoThruModes) {
+        ae.setNoThruTraffic(tm);
+      }
+
       if (scope != Scope.PERMANENT) {
         tempEdges.addEdge(ae);
       }
